# keepkey-bitcoin-only

./: .gitignore  .gitmodules  CHANGELOG.md  FIRMWARE_UPDATE_WIZARD_FIX.md  KeepKey-Dev.cer  Makefile  PERSISTANT_BUG_01.md  PERSISTANT_BUG_02.md  README.md  RELEASE.md  audit_and_sign_releases.ps1  build_and_sign.ps1  check_release_status.ps1  download_sign_upload.ps1  examples.md  sign_msi.ps1  sign_nsis_setup.ps1  test-deps.sh  vault.bat
docs/: architecture.md  bootloader-update-usb-transition.md  contributing.md  frontload-architecture.md  frontload-post.md  frontload-xpub-caching-phase1-implementation.md  github-workflows-signing.md  keepkey-rest-bitcoin-server-plan.md  linux-build-targets.md  migration-plan.md  msix-packaging-guide.md  onboarding-improvements.md  onboarding-override-fix-plan.md  passphrase-cache-issue-resolution.md  passphrase-implementation-plan.md  passphrase-ux-audit-and-fix.md  pin-unlock-improvements.md  release-summary.md  send-page-planning.md  tx-build-api-planning.md  txid-schema-plan.md  usb-hid-driver-analysis.md  usb-hid-driver-summary.md  usb-hid-windows-report-id-fix.md  usb-work.md  usd-value-fix-summary.md  vault-onboarding-implementation-notes.md  vault-v2-axum-architecture.md  wallet-context-event-architecture.md  windows-build-issues.md
msix-package/: AppxManifest.xml
projects/keepkey-rest/: Cargo.toml  Makefile
projects/keepkey-rest/src/: device.rs  lib.rs
projects/keepkey-rest/src/routes/: bitcoin.rs  device.rs  mod.rs  v2.rs
projects/keepkey-rest/tests/: bitcoin_endpoints.rs  test_sign_tx_with_mock_input.rs
projects/keepkey-rust/: Cargo.toml  README.md  blocking_actions.rs  build.rs  commands.rs  core_lib.rs  device_controller.rs  device_queue.rs  device_registry.rs  device_update.rs  friendly_usb.rs  lib.rs  main.rs  test_connection.rs  test_devices.rs  test_hid_raw.rs  updates.rs  usb_manager.rs
projects/keepkey-rust/features/: mod.rs
projects/keepkey-rust/firmware/: releases.json
projects/keepkey-rust/messages/: encoding.rs  macros.rs  mod.rs  protos.rs  timeouts.rs
projects/keepkey-rust/transport/: hid.rs  mod.rs  protocol_adapter.rs  usb.rs  webusb.rs
projects/kkcli/: Cargo.toml  README.md  build.rs
projects/kkcli-v2/: Cargo.toml  README.md
projects/kkcli-v2/src/: main.rs
projects/kkcli-v2/src/commands/: mod.rs
projects/kkcli/docs/: firmware-update-procedure.md  onboarding.md  planning-cli.md  usb.md
projects/kkcli/docs/debugging/: resolved_cache_bug_summary_20250609.md
projects/kkcli/firmware/: lts_manifest.json  releases.json
projects/kkcli/kkcli_derive/: Cargo.toml
projects/kkcli/kkcli_derive/src/: lib.rs
projects/kkcli/src/: default-paths.json  firmware_manager.rs  lib.rs  main.rs
projects/kkcli/src/cli/: list.rs  mod.rs  server.rs
projects/kkcli/src/cli/parsers/: base64.rs  bip32.rs  hex.rs  mod.rs  serde.rs  typed_possible_values.rs  u256.rs  xprv.rs
projects/kkcli/src/cli/system/: apply_policy.rs  change_pin.rs  change_wipe_code.rs  cipher_key_value.rs  mod.rs  sign_identity.rs
projects/kkcli/src/cli/system/debug/: fill_config.rs  flash_dump.rs  get_state.rs
projects/kkcli/src/cli/system/info/: get_features.rs  get_public_key.rs  mod.rs
projects/kkcli/src/cli/system/initialize/: load_device.rs  mod.rs  recovery_device.rs  reset_device.rs
projects/kkcli/src/cli/system/manufacturing/: flash_hash.rs  flash_write.rs  mod.rs  soft_reset.rs
projects/kkcli/src/cli/types/: mod.rs
projects/kkcli/src/cli/utxo/: get_address.rs  sign_message.rs  sign_tx.rs  verify_message.rs
projects/kkcli/src/commands/: list.rs  test.rs
projects/kkcli/src/messages/: mod.rs
projects/kkcli/src/onboarding/: device_detection.rs  main.rs  mod.rs
projects/kkcli/src/server/: README.md  impl_addresses.rs  impl_device.rs  mod.rs  server_init.rs  v2_db.rs  v2_endpoints.rs
projects/kkcli/src/server/cache/: device_cache.rs  frontload.rs  mod.rs
projects/kkcli/src/server/routes/: addresses.rs  auth.rs  bitcoin.rs  common.rs  debug.rs  device.rs  icons.rs  manufacturing.rs  mod.rs  raw.rs  system.rs  system_management.rs  v2.rs  websocket.rs
projects/kkcli/src/transport/: hid.rs  mod.rs  protocol_adapter.rs  usb.rs
projects/vault-v2/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
projects/vault-v2/src-tauri/capabilities/: default.json
projects/vault-v2/src-tauri/icons/: icon.icns
projects/vault-v2/src-tauri/src/: commands.rs  db.rs  device_queue.rs  embedded_firmware.rs  event_controller.rs  lib.rs  logging.rs  main.rs  slip132.rs
projects/vault-v2/src-tauri/src/commands/: pin_setup.rs
projects/vault-v2/src-tauri/src/device/: device_queue.rs  events.rs  interaction_state.rs  mod.rs  pending_operations.rs  queue.rs  state.rs  updates.rs  usb_monitor.rs
projects/vault-v2/src-tauri/src/server/: context.rs  mod.rs  proxy.rs  routes.rs
projects/vault/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
projects/vault/src-tauri/src/: commands.rs  db.rs  default-paths.json  device_controller.rs  device_controller_ext.rs  device_registry.rs  error.rs  index_db.rs  lib.rs  slip132.rs  updates.rs  utils.rs  vault.rs
projects/vault/src-tauri/src/cache/: device_cache.rs  frontload.rs  mod.rs  schema.sql
projects/vault/src-tauri/src/device/: mod.rs  queue.rs  updates.rs
projects/vault/src-tauri/src/messages/: timeouts.rs
projects/vault/src-tauri/src/server/: bitcoin.rs  context.rs  mod.rs  routes.rs
projects/vault/src-tauri/src/server/routes/: auth.rs  impl_addresses.rs  impl_bitcoin.rs  impl_system.rs  v2_endpoints.rs
projects/vault/src-tauri/src/transport/: hid.rs  mod.rs  usb.rs
scripts/: release.sh  start-pioneer-local.sh
skills/: build.ps1  test-api.sh  test-device-state.sh  test-dialog-priority.sh  test-hid-retry-logic.sh  test-logging-system.sh  test-recovery-reconnection.sh  test-rest.sh
tests/: btc-get-address-legacy.js  btc-get-address-segwit.js  debug-cache-mismatch.js  package-lock.json  package.json  sign-tx-bitcoin.js  test-bitcoin-debug.js  test-device-cache-race.js  test-final-cache-fixes.js  test-frontload-debug.js  test-pioneer-live.js  (+4 more)
(+351 files in other folders)
