[package]
name = "keepkey-rest"
version = "0.1.0"
edition = "2021"
description = "Shared REST API for KeepKey Bitcoin-only devices"

[dependencies]
rusqlite = "0.31"

# Core dependencies
anyhow = "1.0.58"
bitcoin = { version = "0.30", features = ["serde", "std"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
thiserror = "1.0.31"
base64 = "0.21"
hex = { version = "0.4.3", features = ["serde"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# REST API
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "5", features = ["axum", "debug-embed"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
