[package]
name = "keepkey_rust"

[lib]
name = "keepkey_rust"
path = "core_lib.rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Headless multi-device queue and transport layer for KeepKey hardware wallets."


[[bin]]
name = "kkq"
path = "main.rs"

[[bin]]
name = "kkcli-v2"
path = "src/bin/kkcli_v2.rs"
edition = "2021"

[build-dependencies]
prost-build = "0.11"
protoc-bin-vendored = "3.0"
serde = { version = "1", features = ["derive"] }
serde_with = { version = "1.13", features = ["hex"] }

[dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
hidapi = { version = "2.6", features = ["linux-static-hidraw"] }
hex = "0.4"
log = "0.4"
once_cell = "1"
prost = "0.11"
prost-types = "0.11"
rand = "0.8"
rusb = { version = "0.9.3", features = ["vendored"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
comfy-table = "7"
clap = { version = "4", features = ["derive"] }
