[package]
name = "kkcli-v2"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kkcli-v2"
path = "src/main.rs"
cargo run --release --bin kkcli_v2
[dependencies]
# Core dependencies
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Table formatting
tabled = "0.15"
colored = "2.0"

# KeepKey integration (using our local keepkey-rust)
keepkey_rust = { path = "../keepkey-rust" }

# Logging
env_logger = "0.10"
log = "0.4"

[features]
default = [] 