[package]
name = "keepkey-gui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "keepkey_gui_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
prost-build = "0.11"
protoc-bin-vendored = "3.0"
serde_with = { version = "1.13", features = ["hex"] }
serde = { version = "1", features = ["derive"] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusb = { version = "0.9.3", features = ["vendored"] }
semver = "1.0"
hidapi = { version = "2.6", features = ["linux-static-hidraw"] }
hex  = "0.4"     # just a helper crate
anyhow = "1.0.58"
async-trait = "0.1"
prost = "0.11"
prost-types = "0.11"
serde_with = { version = "1.13", features = ["hex"] }
bytes = "1.0"
thiserror = "1.0"
lazy_static = "1.4"
once_cell = "1.18.0"
log = "0.4"
tauri-plugin-log = { version = "2.0.0-beta", features = ["colored"] }
rand = "0.8.5"
# Server dependencies
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
# OpenAPI generation + UI
utoipa = "4"
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "5", features = ["axum", "debug-embed"] }
# Vault dependencies - using rusqlite with manual encryption to avoid SQLCipher build issues
rusqlite = { version = "0.31", features = ["bundled"] }
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = "1"
dirs = "5"
base64 = "0.22"
sha2 = "0.10"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
